--- a/lib/web/views/layout.jade
+++ b/lib/web/views/layout.jade
@@ -2,14 +2,51 @@
 html
   head
     title Watch
+    link(rel="stylesheet", href="/css/forms.css")
+    link(rel="stylesheet", href="/css/typography.css")
     style
-      h1 {
-        color: red;
-      }
       textarea {
-        width: 100%;
-        height: 200px;
+        width: 99%;
+        height: 100px;
       }
+      .output {
+        display: none;
+      }
+      .active {
+        display: block;
+      }
+      h2 {
+        font-size: 2em;
+      }
+      h3 {
+        font-size: 1em;
+      }
+      pre {
+        background-color: black;
+        color: white;
+        font-family: monospace;
+        padding: 1em;
+        font-size: 10px;
+      }
+      .timer {
+        margin-left: 1em;
+        font-size: 0.5em;
+      }
+      body {margin-bottom: 100%}
+
     !{renderScriptTags()}
+    script#watcher(type="text/x-handlebars-template")
+      div(id="{{ id }}", class="{{ status }}")
+        h2
+          a(href="#\{{ id }}")
+            {{ name }}
+          span.status - {{ status }}
+          span.timer
+
+        .output(class="{{#if active}}active{{/if}}")
+          h3 STDOUT
+          pre {{ stdout }}
+          h3 STDERR
+          pre {{ stderr }}
   body !{body}
 
